--- a/templates/noobnews/home.html
+++ b/templates/noobnews/home.html
@@ -11,6 +11,7 @@
 {% block body_block %}
 
 <div class="homecontent">
+  <!-- Cycles through top 40 video games  -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:100%; height:100%;" >
       <div class="angle">
     <p>Top 40</p>
@@ -25,6 +26,7 @@
       </div>
     </div>
     <br>
+    <!-- Shows three new release video games -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:100%; height:100%;" >
       <div class="angle2 different">
     <p>New Releases</p>
@@ -45,6 +47,7 @@
   </div></a>
 </div>
 </div>
+<!-- Featured youtube playlist -->
 <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width:100%; height:100%;" >
   <div class="angle">
     <p>Featured Playlist</p></div>
