Added video game image sources

--- a/templates/noobnews/base.html
+++ b/templates/noobnews/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% load staticfiles %}
-
+<!-- sources for Video game images are in populate_noobnews.py script-->
 <html lang="en">
   <head>
     <link rel="stylesheet" href="/static/css/login.css" />
